# haskellgram

./: LICENSE  README.md  haskellgram.cabal  stack.yaml
src/Telegram/: Aux.hs  Methods.hs  Types.hs
